# I.V-2.002-

./: CMakeLists.txt  DEPLOYMENT_ARCHITECTURE.md  GETTING_STARTED.md  INDEX.md  Main.qml  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  deploy-ota.sh  docker-compose.yml  layer.conf  ota_manager.h  package.json
